@@ -1,0 +1,1 @@
+${testbaseurl}/download/intellij/ultimate/2023.3.3/intellij-2023.3.3.tgz
