@@ -1,0 +1,1 @@
+${testbaseurl}/download/pycharm/professional/2024.3.5/pycharm-2024.3.5.tgz
